wrote some more

--- a/Bericht/Bericht.tex
+++ b/Bericht/Bericht.tex
@@ -115,15 +115,17 @@ Before we built the box, both of us started to try different things on the LED's
  For this reason we have three blocks of each five strips instead of just one big block.
  In each of the blocks four LED's are flickering at once, so first the first four, the the next four and so on.
  This happens very fast, for this reason it looks like all of the 225 LED's would be shining at once.
+ The first result we had was very disappointing, as the LED's flickered very much, and the colors were inconsistent.
+ By spending some time working on it, we made our code more and more efficient, which led to the satisfying result we now have.
 
 After the hardware part was finished, we started programming a demo and each of us a game.
- Since we had no working buttons yet, both of the games had a demo mode which was showed on the LED's .
+ Since we had no working buttons yet, both of the games had a demo mode which was showed on the LED's.
 
 We thought that with this done, and only the buttons left, the biggest part of the project would have been done.
  But in fact, it was not.
- The problems we described in the Introduction came to mind only when we started to work with the buttons.
- \texbf{ On code level ???
- We before have written comments in our games, telling us what should happen if a button is pressed.
+ Some of he problems we described in the Introduction came to mind only when we started to work with the buttons.
+ \textbf{ On code level ??? 
+ We have written comments in our games, telling us what should happen if a button is pressed.
  We decided on having Boolean values for both buttons, so when a button is pushed, the Boolean is set to true, and after the information is used, it is set to false.
  Consequently, we are able to react on the push not by complex switch cases in the button handler, but wherever in the code they are needed.}
  
@@ -133,11 +135,15 @@ We thought that with this done, and only the buttons left, the biggest part of t
 on code-level and no code)}
 
 \section{Results}
-Graphics, tables, comparisons, insights..
+\textbf{Graphics, tables, comparisons, insights..}
 
 \section{Conclusion}
 
-Discussion/Conclusion/Lessons learned
+One important lesson we learned was, that we should have started writing this report earlier than we did.
+ It would have been good to write down decisions and important bugs we removed right away, since we forgot about some of them.
+ When starting the report, we had to think a lot about what we made and why, so we could write it down, which took a lot of time.
+
+\textbf{Discussion/Conclusion/Lessons learned}
 
 \section{References}
 
