new logo and some typos

--- a/Bericht/Bericht.tex
+++ b/Bericht/Bericht.tex
@@ -58,7 +58,7 @@
  Seeing that we both had no experience with soldering, especially as it would have taken all of the available project time, we decided on using LED strips instead of 225 separate ones.
  After looking up the major differences between some models, we found out that we need the APA102 (references 1 and 2).
  They have a clock line and are therefore better for us, compared to the WS2812 LEDs which do not have one.
- With the other LEDs we would have run into serious problems.
+ With the other strip type we would have run into serious problems.
  Transferring data to the LEDs in very small and exactly defined time slots is not possible with software running on top of a non real-time operating system.
 
 \section{Building the box}
@@ -131,7 +131,7 @@ We thought that with this done and only the buttons left, the biggest part of th
 \section{Conclusion}
 First of all, we are happy that our project idea worked out and that our goals have been achieved within the given time frame.
  The games are fun to play, nice designed and with almost no flickering anymore the box provides a good gaming experience.
- The following pictures show the finished box, and our three games, TicTacToe, Raindrops and Snake (from top left to bottom right).
+ The following pictures show the finished box as well as our three games: TicTacToe, Raindrops and Snake (from top left to bottom right).
  
  \vspace{1cm}
  { \centering
